# yamlresume

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
src/yamlresume/: __main__.py  build.py  defaults.py  qr.py
src/yamlresume/templates/: index.tpl  style.tpl
